# seafile-mirror

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REUSE.toml  pyproject.toml  release-please-config.json  renovate.json5  renovate.json5.license  seafile_mirror.py
.gitea/actions/poetrybuild/: action.yaml
.gitea/workflows/: linting.yaml  publish.yaml  release.yaml  reuse.yaml  selftests.yaml
.github/actions/uvbuild/: action.yaml
.github/workflows/: ci-security.yaml  publish.yaml  release-please.yaml  release-vulnerabilities.yaml  test.yaml
examples/: seaf-daemon.service  seafile_mirror.conf.yaml
functions/: cachedb.py  helpers.py  seafile.py
seafile_mirror/: __init__.py  _cachedb.py  _helpers.py  _seafile.py  seafile_mirror.py
tests/: seafile_mirror.conf.yaml
