# SPDX-FileCopyrightText: 2023 Max Mehl <https://mehl.mx>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "seafile-mirror"
version = "0.2.3"
description = "Handle clean read-only (re-)syncs of Seafile libraries to mirror them"
authors = [{ name = "Max Mehl", email = "mail@mehl.mx" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = ["seafile", "sync", "mirror", "backup"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["pyyaml>=6.0.1,<7"]

[project.urls]
Repository = "https://github.com/mxmehl/seafile-mirror"

[project.scripts]
seafile-mirror = "seafile_mirror.seafile_mirror:main"

[dependency-groups]
dev = ["ruff>=0.15.10", "ty>=0.0.29"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["seafile_mirror"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T", "FBT", "LOG015", "COM812", "ERA001", "S310", "D205", "D212", "PTH123"]
[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "PLR", "PT011", "ANN001"]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["seafile_mirror"]
